--- a/io.github.butzyung.xranimator.yml
+++ b/io.github.butzyung.xranimator.yml
@@ -14,8 +14,8 @@ finish-args:
   - --device=dri
   - --socket=fallback-x11
   - --socket=fallback-pulseaudio
-  - --share=network
-  - --share=ipc
+  - --share=network # Access Network (Needed for VMC)
+  - --share=ipc # Improves X11 performance
   - --talk-name=org.kde.StatusNotifierWatcher # Tray functionalities on KDE
   - --system-talk-name=org.freedesktop.NetworkManager
   - --talk-name=com.canonical.AppMenu.Registrar
@@ -31,7 +31,7 @@ modules:
       - chmod +x electron
       - install -Dm755 run.sh /app/bin/xranimator
       - install -Dm644 io.github.butzyung.xranimator.desktop /app/share/applications/io.github.butzyung.xranimator.desktop
-      - install -Dm644 icon_teto_512x512.png /app/share/icons/hicolor/512x512/apps/io.github.butzyung.xranimator.png
+      - install -Dm644 icon.png /app/share/icons/hicolor/512x512/apps/io.github.butzyung.xranimator.png
       - mkdir -p /app/share/xranimator
       - cp -a . /app/share/xranimator
 
