--- a/io.github.butzyung.xranimator.yaml
+++ b/io.github.butzyung.xranimator.yaml
@@ -44,7 +44,7 @@ modules:
   - name: XRAnimator
     buildsystem: simple
     build-commands:
-      - install -Dm755 xranimator.sh /app/bin/xranimator # Install launcher wrapper
+      - install -Dm755 run.sh /app/bin/xranimator # Install launcher wrapper
       - install -Dm644 io.github.butzyung.xranimator.desktop /app/share/applications/io.github.butzyung.xranimator.desktop # Install .desktop for normal linux functionality
       - install -Dm644 icon.png /app/share/icons/hicolor/512x512/apps/io.github.butzyung.xranimator.png # Literal legend
       - chmod +x /app/bin/xranimator-electron/electron
@@ -56,7 +56,7 @@ modules:
         url: https://github.com/ButzYung/SystemAnimatorOnline
         branch: master
       - type: file
-        path: xranimator.sh
+        path: run.sh
       - type: file
         path: io.github.butzyung.xranimator.desktop
       - type: file
